assets/css/sparkly-header.scss
---
---

/* Set your site's theme */

:root {
  --main-color-1: #285BB1;
  --main-color-2: #00AE7A;
}

body {
  margin: 0;
  padding:0;
}

section#main{
  display:inline-block;
}

section#sparkly-header {
  background:#1a222c;
  display:flex;
  vertical-align:bottom;
  min-height:50vh;
  background-repeat:no-repeat;
  background-size:cover;
  background-attachment:fixed;
}

section#sparkly-header{
  .headshot {
    margin-bottom: 2.5vh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .headshot a {
    display: inline-block;
    border: none;
    text-decoration: none;
  }

  .headshot img{
    width: 35vw;
    height: 35vw;
    max-width: 500px;
    max-height: 500px;
    min-width: 200px;
    min-height: 200px;
    border-radius: 50%;
    object-fit: cover;
    background-color: blue;
    display: block;
  }

  @media only screen and (max-width: 768px) {
    .headshot img {
      width: 50vw;
      height: 50vw;
      max-width: 400px;
      max-height: 400px;
    }
  }

  .particles-js-canvas-el {
    height: 100vh !important
  }

  .header {
    font-family: 'Montserrat',
    sans-serif;
    z-index: 1;
    text-align: center;
    color: #fff;
    position:absolute;
    top:50%;
    left:50%;
    margin:0 auto;
    -webkit-transform:translate(-50%,-50%);
    transform:translate(-50%,-50%)
  }

  .site-title{
    font-size:50px;
    display:block;
    line-height:1;
    color:#fff
  }

  .site-description{
    font-size:20px;
    display:block;
    line-height:1;
    color:#fff;
    margin-top:10px
  }

}


@media only screen and (min-width:768px){
section#sparkly-header {
  .site-title{
    margin:0;
    font-size:76px
    }

  .site-description{
    font-size:20px;
    display:block;
    line-height:1;
    color:#fff;
    margin-top:10px
    }
  }
}

@media only screen and (min-width:768px){
section#sparkly-header {
  .header .site-description{
    font-size:34px
    }
  .header-links{
    margin:10px
  }
}
}
.header-links
  .link{
    color:#fff;
    text-decoration:none;
    font-size:15px;
    margin:10px
}

@media only screen and (min-width:768px){
section#sparkly-header
  .header-links .link{
    font-size:20px
  }
}

section#sparkly-header{
  .header-icons{
    display:flex;
    justify-content:center;
    align-items:center;
    text-align:center
  }

  .header-icons a{
      border:none!important;
      padding:none;
      margin:none
    }
    .down,.header-icons .icon{
      color:#fff;
      text-align:center
    }
  .header-icons .icon{
    height:20px;
    padding:10px;
    border-radius:50%;
    transition:all .5s;
    width:20px;
    font-size:20px;
    margin:5px;
    border:2px solid #fff
  }
  .header-icons .icon:active,.header-icons .icon:hover{
    color:#1a222c;
    background:#fff
  }
}

@media only screen and (min-width:768px){
section#sparkly-header
  .header-icons .icon{
    width:30px;
    height:30px;
    font-size:30px;
    line-height:30px
  }
}

section#sparkly-header{
  .down{
    position:absolute;
    bottom:25px;
    width:100%;
    margin:0 auto;
    display:block;
    font-size:30px;
    line-height:30px;
    cursor:pointer;
    border:none!important;
  }

  .down .icon{
      position:absolute;
      -webkit-transform-style:preserve-3d;
      transform-style:preserve-3d;
      top:50%;
      left:50%;
      -webkit-transform:translate(-50%,-50%);
      transform:translate(-50%,-50%);
      width:100px;
      height:100px;
      fill:#fff;
      -webkit-animation:pulse 1.3s infinite;
      animation:pulse 1.3s infinite
  }
  .down .icon:active,.down .icon:hover,.footer a:active,.footer a:hover{
    color:#4b5664
  }
}

/* Design Regular header */
section#regular-header {
  display: flex;
  vertical-align:bottom;
  min-height:10vh;
  border-bottom: 1px dotted black;

  .header{
    font-family:'Montserrat',
    sans-serif;
    z-index:1;
    padding: 25px 25px 0px;
  }
}



/* Design the main section */
.centered-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

section#main  {
  padding: 25px;
  margin: 25px 0 25px;
}

@media only screen and (min-width: 768px){
  section#main  {
    padding: 50px;
  }
}

footer {
   position: relative;
   bottom: 0;
   padding-top: 1rem;
   margin: 0 5vw 0;
   -webkit-font-smoothing: subpixel-antialiased;
}

